--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,6 @@
     <string name="second_fragment_label">Etiqueta del segundo fragmento</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="profile_image">Imagen de perfil</string>
     <!-- Agrega más strings según sea necesario para tu aplicación -->
 </resources>
